--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href=".css/Style.css" rel="stylesheet" type="text/css" />
+    <link href="/Practica/.css/Style.css" rel="stylesheet" type="text/css" />
     <title>SciFiCompany</title>
 </head>
 <body>
@@ -16,9 +16,9 @@
     
     <p>Algunos de nuestros trabajos:</p>  
 
-    <img src="Images/Imagen_1.png" alt="Pagina_1">
-    <img src="Images/Imagen_2.png" alt="Pagina_2">
-    <img src="Images/Imagen_3.png" alt="pagina_3">
+    <img src="/Practica/Images/Imagen_1.png" alt="Pagina_1">
+    <img src="Practica/Images/Imagen_2.png" alt="Pagina_2">
+    <img src="Practica/Images/Imagen_3.png" alt="pagina_3">
 
     <h3>¡No dude en llamarnos!</h3>    
     <H3>(+598) 99 000 000)</H3>
