--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="Practica/.css/style.css" rel="stylesheet" type="text/css" />
+    <link href="practica/.css/style.css" rel="stylesheet" type="text/css" />
     <title>SciFiCompany</title>
 </head>
 <body>
@@ -16,7 +16,7 @@
     
     <p>Algunos de nuestros trabajos:</p>  
 
-    <img src="Practica/Images/Imagen_1.png" alt="Pagina_1">
+    <img src="practica/Images/Imagen_1.png" alt="Pagina_1">
     <img src="Practica/Images/Imagen_2.png" alt="Pagina_2">
     <img src="Practica/Images/Imagen_3.png" alt="pagina_3">
 
